--- a/mygame.html
+++ b/mygame.html
@@ -11,6 +11,7 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
     <div style="display:none;">
         <img id="zdjecie" src="./zdjecie.jpg" width="500" height="500">
+        <img id="explosion" src="./explosion.png" width="500" height="500">
     </div>
 </body>
 
