--- a/mygame.html
+++ b/mygame.html
@@ -8,9 +8,10 @@
 
 <body>
 
+
     <canvas id="myCanvas" width="800" height="600"></canvas>
     <div style="display:none;">
-        <img id="zdjecie" src="./zdjecie.jpg" width="500" height="500">
+        <img id="pitch" src="./pitch.jpg" width="400" height="500">
     </div>
 </body>
 
