turn system worked out + ball img added

--- a/mygame.html
+++ b/mygame.html
@@ -12,6 +12,7 @@
     <canvas id="myCanvas" width="800" height="600"></canvas>
     <div style="display:none;">
         <img id="pitch" src="./pitch.jpg" width="400" height="500">
+        <img id="ball" src="./soccerball-png-25.png" width="30" height="30">
     </div>
 </body>
 
