--- a/mygame.html
+++ b/mygame.html
@@ -14,6 +14,7 @@
         <img id="pitch" src="./pitch.jpg" width="400" height="500">
         <img id="ball" src="./soccerball-png-25.png" width="30" height="30">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
 </body>
 
 </html>
