--- a/mygame.html
+++ b/mygame.html
@@ -4,6 +4,7 @@
 <head>
     <script src="mygame.js"></script>
     <link rel="stylesheet" type="text/css" href="mygame.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
 
 <body>
