--- a/mygame.html
+++ b/mygame.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="mygame.js"></script>
+    <script src="./index.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="mygame.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
